--- a/src/DescriptionBox/descriptionBox.css
+++ b/src/DescriptionBox/descriptionBox.css
@@ -4,4 +4,5 @@
     background-color: white;
     border-radius: 15px;
     padding: 0px 10px;
+    margin-bottom: 15px;
 }
