--- a/src/Heading/heading.css
+++ b/src/Heading/heading.css
@@ -1,10 +1,14 @@
 .Heading {
     background-color: pink;
-    margin-top: -10px;
     color: white;
-    height: 75px;
+    height: 25px;
     width: 100%;
-    text-align:center;
+    margin: 0 0;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
+    padding-top: 15px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
