--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,24 +1,25 @@
 .Navbar {
     color: red;
     width: 100%;
-    height: 40px;
+    height: 52px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #logo {
-    float: left;
     height: 45px;
     width: 45px;
-    margin: 5px;
-    margin-left: 30px;
+    margin-left: 20px;
 }
 
 button {
-    margin: 10px;
-    margin-top: 13px;
-    margin-right: 20px;
     background-color: black;
     color: white;
     float: right;
+    height: 30px;
+    width: 140px;
     border-radius: 20px;
-    padding: 5px 15px;
+    margin-right: 20px;
 }
